# sysid

./: .gitignore  LICENSE  README.md  d2c.py  part1_1_train_test_plants.py  part1_2_find_p_nom_and_w2.py  part_2.py  plant_util.py  pyproject.toml  requirements.txt  requirements_linux.txt  requirements_windows.txt  test_graph_raw_data.py  test_nominal_plant_methods.py  test_tf_decoder.py
DATA/: SISO_ID_DATA_1.csv  SISO_ID_DATA_2.csv  SISO_ID_DATA_3.csv  SISO_ID_DATA_4.csv  SISO_ID_DATA_5.csv
DATA/reference/: ref.csv
good_plants/v1/: good_plants_no_01.txt  good_plants_no_02.txt  good_plants_no_03.txt  good_plants_no_04.txt  good_plants_st_01.txt  good_plants_st_02.txt  good_plants_st_03.txt  good_plants_st_04.txt  good_plants_v1.txt
good_plants/v2/: P_nom.json  W2.json  good_plants_n1_d3_no_01.txt  good_plants_n1_d3_st_01.txt  good_plants_n1_d4_no_01.txt  good_plants_n2_d3_no_01.txt  good_plants_n2_d4_no_01.txt  good_plants_v2.txt  plants_trained_v2.json  results_plants_trained_v2.json
good_plants/v3/: P_nom.json  W2.json  good_plants_n1_d6_no_01.txt  good_plants_n5_d6_no_01.txt  good_plants_v3.txt  plants_trained_v3.json  results_plants_trained_v3.json
src/sysid/: find_simple_pi_controller.py  part1_1_train_test_plants.py  part1_2_find_p_nom_and_w2.py  plant_nominal.py  plant_util.py  test_load.py  test_nominal_plant_methods.py  test_tf_decoder.py  unc_bound.py
tests/: test_plant_util.py
training_plans/: plants_to_train.json
