[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sysid"
version = "0.0.1"
authors = [
  { name="Antoine Henri", email="ahenri333@gmail.com" },
]
description = "Simple Linear System Characterization Application"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 11",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/eltonnk/sysid"
"Bug Tracker" = "https://github.com/eltonnk/sysid/issues"