[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sysid"
version = "0.0.1"
authors = [
  { name="Antoine Henri", email="ahenri333@gmail.com" },
]
description = "Simple Linear System Characterization Application"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 11",
]
dependencies = [
    "numpy >= 1.22.4",
    "scipy >= 1.8.1",
    "control >= 0.9.2",
    "slycot >= 0.4.0",
    "scikit-learn >= 1.1.3",
    "dataclasses-json >= 0.5.7",
    "pandas >= 1.4.3",
]


[project.urls]
"Homepage" = "https://github.com/eltonnk/sysid"
"Bug Tracker" = "https://github.com/eltonnk/sysid/issues"